--- a/src/app/pacientes/listar/listar-paciente.component.html
+++ b/src/app/pacientes/listar/listar-paciente.component.html
@@ -1,1 +1,54 @@
-<p>listar-paciente works!</p>
+<h1 style="text-align: center; margin-top: 3rem;margin-bottom: 2rem;">Lista de Pacientes</h1>
+
+<table class="table table-striped table-bordered table-hover">
+  <thead>
+    <tr style="background: rgba(0, 0, 0, 0.664); color: white;">
+      <th>Paciente</th>
+      <th>CPF</th>
+      <th>Endereço</th>
+      <th>Tipo de Prioridade</th>
+      <th>Status</th>
+      <th class="text-center">
+        <a  class="btn btn-xs btn-success">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
+        </a>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor='let paciente of pacientes'>
+        <ng-template [ngIf]='paciente.status == true'>
+          <td  [class.success]="!paciente.status">
+            {{ paciente.nome }}
+          </td>
+          <td >
+            {{ paciente.cpf }}
+          </td>
+          <td >
+            {{ paciente.endereco }}
+          </td>
+          <td >
+            {{ paciente.tipoPrioridade }}
+          </td>
+          <td >
+            {{ paciente.status }}
+          </td>
+          <!--  <td style="width: 70px" class="text-center">
+                          <input type="checkbox">
+                        </td> -->
+          <td class="text-center" style="width: 200px">
+            <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
+              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
+            </a>
+            <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
+            </a>
+          </td>
+
+        </ng-template>
+    </tr>
+  </tbody>
+
+</table>
+
+<p *ngIf='pacientes.length==0'>Nenhuma tarefa cadastrada.</p>
