--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="nav-header">
-        <a href="" class="navbar-brand">
+        <a class="navbar-brand" [routerLink] = "['/']">
           {{ title }}
         </a>
       </div>
