--- a/src/app/pacientes/listar/listar-paciente.component.html
+++ b/src/app/pacientes/listar/listar-paciente.component.html
@@ -9,7 +9,7 @@
       <th>Tipo de Prioridade</th>
       <th>Status</th>
       <th class="text-center">
-        <a  class="btn btn-xs btn-success">
+        <a  class="btn btn-xs btn-success" [routerLink] = "['/pacientes/cadastrar']">
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
         </a>
       </th>
@@ -30,12 +30,11 @@
           <td >
             {{ paciente.tipoPrioridade }}
           </td>
-          <td >
+          <!-- <td >
             {{ paciente.status }}
-          </td>
-          <!--  <td style="width: 70px" class="text-center">
-                          <input type="checkbox">
-                        </td> -->
+          </td> -->
+           <td style="width: 70px" class="text-center">
+            <input type="checkbox" [checked]="paciente.status == true">                        </td>
           <td class="text-center" style="width: 200px">
             <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
