--- a/src/app/pacientes/listar/listar-paciente.component.html
+++ b/src/app/pacientes/listar/listar-paciente.component.html
@@ -7,7 +7,7 @@
       <th>CPF</th>
       <th>Endereço</th>
       <th>Tipo de Prioridade</th>
-      <th>Status</th>
+      <!-- <th>Status</th> -->
       <th class="text-center">
         <a  class="btn btn-xs btn-success" [routerLink] = "['/pacientes/cadastrar']">
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
@@ -33,13 +33,13 @@
           <!-- <td >
             {{ paciente.status }}
           </td> -->
-           <td style="width: 70px" class="text-center">
-            <input type="checkbox" [checked]="paciente.status == true">                        </td>
+          <!--  <td style="width: 70px" class="text-center">
+            <input type="checkbox" [checked]="paciente.status == true">                        </td> -->
           <td class="text-center" style="width: 200px">
             <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
             </a>
-            <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
+            <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger"(click)="remover($event,paciente)">
               <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Remover
             </a>
           </td>
