--- a/src/app/pacientes/listar/listar-paciente.component.html
+++ b/src/app/pacientes/listar/listar-paciente.component.html
@@ -36,7 +36,7 @@
           <!--  <td style="width: 70px" class="text-center">
             <input type="checkbox" [checked]="paciente.status == true">                        </td> -->
           <td class="text-center" style="width: 200px">
-            <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
+            <a title="Editar" alt="Editar" class="btn btn-xs btn-info"   [routerLink] = "['/pacientes/editar',paciente.id]">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
             </a>
             <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger"(click)="remover($event,paciente)">
