--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="nav-header">
-        <a class="navbar-brand" [routerLink] = "['/']">
-          {{ title }}
+        <a class="navbar-brand" [routerLink] = "['/']"><img src="https://fontmeme.com/permalink/210929/6ac8eef288b514669a05baa5d030552f.png" alt="fonte-hospital" border="0">
+
         </a>
       </div>
     </div>
