--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+img {
+  width: 55%;
+  margin-left: 25%;
+}
+
+.form_cadastro {
+  width: 99%;
+  padding: 10px;
+  background: #fff;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+}
