--- a/src/app/pacientes/listar/listar-paciente.component.html
+++ b/src/app/pacientes/listar/listar-paciente.component.html
@@ -7,7 +7,7 @@
       <th>CPF</th>
       <th>Endereço</th>
       <th>Tipo de Prioridade</th>
-      <!-- <th>Status</th> -->
+      <th>Atendimento</th>
       <th class="text-center">
         <a  class="btn btn-xs btn-success" [routerLink] = "['/pacientes/cadastrar']">
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Novo
@@ -18,7 +18,7 @@
   <tbody>
     <tr *ngFor='let paciente of pacientes'>
         <ng-template [ngIf]='paciente.status == true'>
-          <td [nomePaciente]="paciente.nome" [class.success]="!paciente.status">
+          <td [nomePaciente]="paciente.atendimento" [class.success]="!paciente.atendimento">
             {{ paciente.nome }}
           </td>
           <td >
@@ -33,8 +33,9 @@
           <!-- <td >
             {{ paciente.status }}
           </td> -->
-          <!--  <td style="width: 70px" class="text-center">
-            <input type="checkbox" [checked]="paciente.status == true">                        </td> -->
+           <td style="width: 70px" class="text-center">
+           <input type="checkbox" [value]='paciente.id' [checked]="paciente.atendimento" (click)="alterarStatus(paciente)">
+           </td>
           <td class="text-center" style="width: 200px">
             <a title="Editar" alt="Editar" class="btn btn-xs btn-info"   [routerLink] = "['/pacientes/editar',paciente.id]">
               <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Editar
